--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="battleground_title">18sp</dimen>
+
+    <dimen name="common_padding">16dp</dimen>
 </resources>
