--- a/features/lot/src/main/res/layout/fragment_lot.xml
+++ b/features/lot/src/main/res/layout/fragment_lot.xml
@@ -11,9 +11,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_lot_your_team"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/battleground_height"
+        android:layout_height="@dimen/lot_height"
         android:layout_gravity="center_horizontal"
-        app:cardCornerRadius="@dimen/battleground_corner_radius"
+        app:cardCornerRadius="@dimen/lot_corner_radius"
         >
 
         <TextView
@@ -24,7 +24,7 @@
             android:text="@string/your_team"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/battleground_title"
+            android:textSize="@dimen/lot_title"
             android:textStyle="bold"
             />
 
@@ -33,10 +33,10 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_lot_enemy_team"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/battleground_height"
+        android:layout_height="@dimen/lot_height"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/common_padding"
-        app:cardCornerRadius="@dimen/battleground_corner_radius"
+        app:cardCornerRadius="@dimen/lot_corner_radius"
         >
 
         <TextView
@@ -47,7 +47,7 @@
             android:text="@string/enemy_team"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/battleground_title"
+            android:textSize="@dimen/lot_title"
             android:textStyle="bold"
             />
 
