--- a/features/lot/src/main/res/values/dimens.xml
+++ b/features/lot/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="battleground_corner_radius">10dp</dimen>
-    <dimen name="battleground_height">100dp</dimen>
-    <dimen name="common_padding">16dp</dimen>
+    <dimen name="lot_corner_radius">10dp</dimen>
+    <dimen name="lot_height">100dp</dimen>
+    <dimen name="lot_title">18sp</dimen>
 </resources>
