--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000</color>
     <color name="black_semitransparent">#3C000000</color>
+    <color name="dusty_gray">#9c9c9c</color>
 </resources>
